Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -29,15 +29,14 @@ proxies:
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 127","type":"vless","server":"109.61.16.89","port":30938,"udp":false,"uuid":"1068814a-6d43-40d9-a127-0f6b6b77ccfc","tls":false,"servername":"indeed.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"OkwhFGkP6NhXbmfBpBKqJ_HDNEcqbkp0mMc9HeYVBBE","short-id":"9f2b1f07","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @prrofile_purple | 135","type":"vless","server":"46.62.168.70","port":23737,"udp":false,"uuid":"debf2a42-1ff4-4ea6-92a4-f6ac49595cc7","tls":false,"servername":"varzesh3.com","network":"grpc","reality-opts":{"public-key":"i5nssGunCVG0W2CI3OM-wGXJwCn9W5Xvm0-tQw_SgEQ","short-id":"7c0b6c88fe5c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 139","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @ConfigsHUB | 0","type":"vless","server":"128.140.51.22","port":1001,"udp":false,"uuid":"b8ad2eb2-d814-4fe9-b10b-b0960dec9152","tls":false,"servername":"ea.com","network":"tcp","reality-opts":{"public-key":"2EZXYUFvq9YgSuJ_OFyrHw-8DcVhQQLPNazcF2be60Y","short-id":"89d5cda1","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇷🇺RU | 🟢 | vless | @ConfigsHUB | 6","type":"vless","server":"94.26.228.10","port":443,"udp":false,"uuid":"1a6fe500-59da-4598-8576-256f06765ffb","tls":false,"servername":"ru.sfasti.ru","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"J_jQq9-SWQZjiMhuPaFV7V2MaJ4pkKgVRaz7x6tmvy8","short-id":"16895459a2c7768d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10","type":"vless","server":"57.129.15.177","port":8442,"udp":false,"uuid":"35372035-3320-4438-a035-312035342031","tls":false,"servername":"zula.ir.AstroVPN-official.AstroVPN-official.workers.dev.AstroVPN_Official.org.AstroVPN.com.AstroVPN_Official.xyz.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.monster.AstroVPN_OfficialJoinTelegram-------------AstroVPN_Official----------Join.ir","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"pFRfJJDY6TYJq-OVgAqFXhdaeur7gJWJM-RZT8g8yAA","short-id":"59b75803","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 6","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2","type":"vless","server":"deepend.paneltelecode.xyz","port":443,"udp":false,"uuid":"028e0ae7-5640-492d-bdae-f3c44d47e42d","tls":false,"servername":"afternic.com","network":"grpc","grpc-opts":{"grpc-service-name":"Dev"},"reality-opts":{"public-key":"J5aaCYQft4PeaMxenmrVh5WUQYRXuKNUtblM9TRpXAk","short-id":"cc26b226","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8","type":"vless","server":"frangets.rtpxc.com","port":8991,"udp":false,"uuid":"4ed90fc3-c483-4f0a-847c-2d57f2160546","tls":false,"servername":"Yahoo.com","network":"tcp","reality-opts":{"public-key":"4iRgsprSY0pw6exP4rZhesdsjuLANTNEy2clmgh9i1Q","short-id":"ab23a2cd0e3de56a","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 9","type":"vless","server":"195.93.253.49","port":33094,"udp":false,"uuid":"6f8923d9-f812-4ca6-b93a-8f9227bf2eab","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"35JazACyPS6LcDwpGibneEeMzkzGYWf4KTG_Oqp0oBE","short-id":"29489194da0d5d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 13","type":"vless","server":"31.169.124.240","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇹🇷TR | 🟢 | vless | @FreakConfig | 0","type":"vless","server":"62.60.233.250","port":443,"udp":false,"uuid":"fd0cdd44-2361-11f0-9970-45e1d80c4039","tls":false,"servername":"images.apple.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"MFsbnsNQsSpZwP-_Ohzako6aHpfK4-rbssxhr3eywWw","short-id":"4476a3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇹🇷TR | 🟢 | vless | @FreakConfig | 1","type":"vless","server":"62.60.233.250","port":443,"udp":false,"uuid":"fd0cdd44-2361-11f0-9970-45e1d80c4039","tls":false,"servername":"images.apple.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"MFsbnsNQsSpZwP-_Ohzako6aHpfK4-rbssxhr3eywWw","short-id":"4476a3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @flyv2ray | 3","type":"vless","server":"bfly.tuozs.ir","port":2083,"udp":false,"uuid":"de4f5606-baf6-4bc2-a715-7cfe39dda1ed","tls":false,"servername":"miro.com","network":"grpc","reality-opts":{"public-key":"tMVNburGfNg0IHRgzlmoqV22mx1GgkRe8qzBouEYY3Y","short-id":"a25aca9336","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🟢 | vless | @mehrosaboran | 2","type":"vless","server":"91.99.70.212","port":443,"udp":false,"uuid":"738ebc1c-c44a-418e-8c2c-f9e2efe1f4fe","tls":false,"servername":"www.cdn77.com","network":"grpc","grpc-opts":{"grpc-service-name":"@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM"},"reality-opts":{"public-key":"Zjzu45fPTjjaIcBoYyaLqieLtsWJD8ujdzNOQodWvnk","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @mehrosaboran | 6","type":"vless","server":"91.99.70.212","port":443,"udp":false,"uuid":"2cd455a4-c698-42de-9830-ac628dbe2e26","tls":false,"servername":"www.cdn77.com","network":"grpc","grpc-opts":{"grpc-service-name":"@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM"},"reality-opts":{"public-key":"Zjzu45fPTjjaIcBoYyaLqieLtsWJD8ujdzNOQodWvnk","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -78,15 +77,14 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 127'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
-      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 0'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 6'
+      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 9'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 13'
-      - '🇹🇷TR | 🟢 | vless | @FreakConfig | 0'
+      - '🇹🇷TR | 🟢 | vless | @FreakConfig | 1'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 3'
       - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 2'
       - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 6'
@@ -127,15 +125,14 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 127'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
-      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 0'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 6'
+      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 9'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 13'
-      - '🇹🇷TR | 🟢 | vless | @FreakConfig | 0'
+      - '🇹🇷TR | 🟢 | vless | @FreakConfig | 1'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 3'
       - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 2'
       - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 6'
@@ -175,15 +172,14 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 127'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
-      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 0'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 6'
+      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 9'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 13'
-      - '🇹🇷TR | 🟢 | vless | @FreakConfig | 0'
+      - '🇹🇷TR | 🟢 | vless | @FreakConfig | 1'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 3'
       - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 2'
       - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 6'
