Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -12,7 +12,6 @@ proxies:
   - {"name":"🇫🇮FI | 🔴 | vless | @melov2ray | 45","type":"vless","server":"65.109.208.107","port":2083,"udp":false,"uuid":"7dce4e98-52a9-42d1-95e7-996403e310c5","tls":false,"servername":"khamenei.ir","network":"grpc","grpc-opts":{"grpc-service-name":"melov2ray"},"reality-opts":{"public-key":"mDWXgatiJqUc4fmeDQqGusEBIhjFVrQ85y_ZUfNpFV8","short-id":"54602915a7","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🔴 | vless | @melov2ray | 61","type":"vless","server":"65.109.208.107","port":2083,"udp":false,"uuid":"0c2a1be7-cdde-4854-a45c-ddec52584fa1","tls":false,"servername":"khamenei.ir","network":"grpc","grpc-opts":{"grpc-service-name":"melov2ray"},"reality-opts":{"public-key":"mDWXgatiJqUc4fmeDQqGusEBIhjFVrQ85y_ZUfNpFV8","short-id":"54602915a7","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17","type":"vless","server":"91.107.254.202","port":8443,"udp":false,"uuid":"a6580107-b1e0-4057-9f47-ac7f28de457a","tls":false,"servername":"firebase.googleapis.com","network":"xhttp","reality-opts":{"public-key":"4Xu_jqRD-mbhEwNyntlz_6zU4VhsE0-QWCxAbhEL_H4","short-id":"7ab467","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇹🇷TR | 🟢 | vless | @proxy_kafee | 12","type":"vless","server":"45.12.143.191","port":20329,"udp":false,"uuid":"e105e56a-5f81-41a2-ab44-bfffc9b00674","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"Lj3MXlg16CTFHtU88acSS-ACfGnwJ_xkU6dC6k8OeDo","short-id":"4602ee9f9f36","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8","type":"vless","server":"185.250.181.128","port":16106,"udp":false,"uuid":"aa1aac84-6a86-41b9-bd34-1a036e06976f","tls":false,"servername":"yahoo.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"FnkrwrjQqktvwxPvLn7KyWZIq8bUAvVaeCrI_VhAZ34","short-id":"3b6239cf6fd84dd3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10","type":"vless","server":"5.182.36.251","port":16331,"udp":false,"uuid":"d7dbeb1e-268c-465c-8f59-489f14703efd","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"wYtc0dMr5fw5bBQkbLNpTqtu0m4B9NKnOyEWjRJUmzk","short-id":"910aab","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12","type":"vless","server":"deu246.bypassall.org","port":443,"udp":false,"uuid":"b4b8aa1f-77d2-4851-a5a4-f78886f3e997","tls":false,"servername":"www.bing.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"BhTJ3phnq-Z-10aFKSsj1lzhA8mULR4L6leE4-0WTAs","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -29,8 +28,9 @@ proxies:
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 127","type":"vless","server":"109.61.16.89","port":30938,"udp":false,"uuid":"1068814a-6d43-40d9-a127-0f6b6b77ccfc","tls":false,"servername":"indeed.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"OkwhFGkP6NhXbmfBpBKqJ_HDNEcqbkp0mMc9HeYVBBE","short-id":"9f2b1f07","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @prrofile_purple | 135","type":"vless","server":"46.62.168.70","port":23737,"udp":false,"uuid":"debf2a42-1ff4-4ea6-92a4-f6ac49595cc7","tls":false,"servername":"varzesh3.com","network":"grpc","reality-opts":{"public-key":"i5nssGunCVG0W2CI3OM-wGXJwCn9W5Xvm0-tQw_SgEQ","short-id":"7c0b6c88fe5c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 139","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
-  - {"name":"🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10","type":"vless","server":"57.129.15.177","port":8442,"udp":false,"uuid":"35372035-3320-4438-a035-312035342031","tls":false,"servername":"zula.ir.AstroVPN-official.AstroVPN-official.workers.dev.AstroVPN_Official.org.AstroVPN.com.AstroVPN_Official.xyz.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.AstroVPN_Official.monster.AstroVPN_OfficialJoinTelegram-------------AstroVPN_Official----------Join.ir","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"pFRfJJDY6TYJq-OVgAqFXhdaeur7gJWJM-RZT8g8yAA","short-id":"59b75803","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 6","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇹🇷TR | 🟢 | vless | @ShadowProxy66 | 2","type":"vless","server":"45.12.143.191","port":20329,"udp":false,"uuid":"e105e56a-5f81-41a2-ab44-bfffc9b00674","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"Lj3MXlg16CTFHtU88acSS-ACfGnwJ_xkU6dC6k8OeDo","short-id":"4602ee9f9f36","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @ConfigsHUB | 5","type":"vless","server":"128.140.51.22","port":1001,"udp":false,"uuid":"b8ad2eb2-d814-4fe9-b10b-b0960dec9152","tls":false,"servername":"ea.com","network":"tcp","reality-opts":{"public-key":"2EZXYUFvq9YgSuJ_OFyrHw-8DcVhQQLPNazcF2be60Y","short-id":"89d5cda1","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 7","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2","type":"vless","server":"deepend.paneltelecode.xyz","port":443,"udp":false,"uuid":"028e0ae7-5640-492d-bdae-f3c44d47e42d","tls":false,"servername":"afternic.com","network":"grpc","grpc-opts":{"grpc-service-name":"Dev"},"reality-opts":{"public-key":"J5aaCYQft4PeaMxenmrVh5WUQYRXuKNUtblM9TRpXAk","short-id":"cc26b226","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8","type":"vless","server":"frangets.rtpxc.com","port":8991,"udp":false,"uuid":"4ed90fc3-c483-4f0a-847c-2d57f2160546","tls":false,"servername":"Yahoo.com","network":"tcp","reality-opts":{"public-key":"4iRgsprSY0pw6exP4rZhesdsjuLANTNEy2clmgh9i1Q","short-id":"ab23a2cd0e3de56a","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -60,7 +60,6 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 45'
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 61'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
-      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 12'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12'
@@ -77,8 +76,9 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 127'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
-      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10'
-      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
+      - '🇹🇷TR | 🟢 | vless | @ShadowProxy66 | 2'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 5'
+      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 7'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8'
@@ -108,7 +108,6 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 45'
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 61'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
-      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 12'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12'
@@ -125,8 +124,9 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 127'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
-      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10'
-      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
+      - '🇹🇷TR | 🟢 | vless | @ShadowProxy66 | 2'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 5'
+      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 7'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8'
@@ -155,7 +155,6 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 45'
       - '🇫🇮FI | 🔴 | vless | @melov2ray | 61'
       - '🇩🇪DE | 🔴 | vless | @CUSTOMVPNSERVER | 17'
-      - '🇹🇷TR | 🟢 | vless | @proxy_kafee | 12'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 8'
       - '🇨🇭CH | 🟢 | vless | @Outline_Vpn | 10'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 12'
@@ -172,8 +171,9 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 127'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
-      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 10'
-      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
+      - '🇹🇷TR | 🟢 | vless | @ShadowProxy66 | 2'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 5'
+      - '🇩🇪DE | 🟢 | vless | @free1_vpn | 7'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 2'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 7'
       - '🇩🇪DE | 🟢 | vless | @Outlinev2rayNG | 8'
